--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEiWBDsDZxO_L0QETNZVyDS_OQPqb2Gww&callback=initMap"
     ></script>
+    <link rel="stylesheet" href="index.css">
   </head>
 <body>
-  <div id="map" style="height: 600px"></div>
+  <button class="btn-map">Click me!</button>
+  <div class="no" id="map" style="height: 600px"></div>
   
   <script>
 
